[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psarc-converter"
version = "0.1.0"
description = "Standalone CLI scaffold for inspecting, staging, packaging, and validating PSARC conversions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mark + Hermes" }
]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
psarc-converter = "psarc_converter.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
