[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charts-converter"
version = "0.1.0"
description = "Standalone chart converter with CLI and simple desktop GUI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mark + Hermes" }
]
dependencies = [
  "Pillow>=10.0",
  "pycryptodome>=3.20",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
build = [
  "imageio-ffmpeg>=0.6.0",
  "pyinstaller>=6.10",
  "pytest>=8.0",
]

[project.scripts]
charts-converter = "charts_converter.cli:main"
charts-converter-gui = "charts_converter.gui:main"

[tool.setuptools]
packages = ["charts_converter"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
